finished the js part of the lab

--- a/html-css/src/main/resources/static/css/main.css
+++ b/html-css/src/main/resources/static/css/main.css
@@ -1,3 +1,10 @@
 input[type="number"] {
   width: 3em;
 }
+.body {
+  background-color: #5689c6;
+  text-align: center;
+}
+#anID {
+  font-size: 5em;
+}
